--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -13,3 +13,24 @@
     color: gray;
     font-size: 20px;
 }
+
+.stats_list {
+    display: flex;
+    justify-content: space-around;
+    padding: 15px;
+    background-color: #abb1b4;
+}
+
+.label {
+    display: block;
+    font-size: 14px;
+    line-height: 2;
+    color: #fff;
+}
+
+.percentage {
+    display: block;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+}
